# qimmiit

./: .gitignore  .gitmodules  CENTRAL_ORCHESTRATOR_FOR_COREGFX.md  CMakeLists.txt  CMakePresets.json  Central Orchestrator Architecture  LICENSE  PIPELINE_COMPLETE.md  README.md  VCPKG_SETUP.md  check_missing_protos.sh  reconfigure.bat  vcpkg.json
agents/: AGENT_GUIDE.md  CMakeLists.txt  README.md
agents/common/: CMakeLists.txt  README.md
agents/common/include/: BaseAgent.hpp  IAgentModule.hpp
agents/common/proto/: agent_common.proto
agents/umiak-agent/: CMakeLists.txt  README.md
agents/umiak-agent/proto/: umiak.proto
agents/umiak-agent/src/: AgentCommands.hpp  UmiakAgent.cpp  UmiakAgent.hpp  UmiakService.cpp  UmiakService.hpp  main.cpp
content-tools/sakku/native/: CMakeLists.txt  README.md
coregfx/: CMakeLists.txt  GROUPING.md  IMPROVEMENT_PLAN.md  REFACTORING.md  VKRESULT_MAPPING_USAGE.md  coregfxConfig.cmake.in
coregfx/adapters/: imgui_stubs.cpp
coregfx/examples/: CMakeLists.txt  README.md  main.cpp
coregfx/include/coregfx/: coregfx_export.hpp  ocean.hpp
coregfx/include/frost/: frost.hpp
coregfx/include/lava/: README.md  architecture.puml
coregfx/proto/: FROST_ERROR_MAPPING.md  UNUSED_MESSAGES.md  cgfx.proto  context_engine.proto  coregfx_control.proto  lunara1.proto
coregfx/src/: vulkan_context.cpp
coregfx/src/core/: ConfigManager.cpp  ConfigManagerV2.cpp  ConfigProvider.cpp  CryoErrorCodes.cpp  ocean_base_refactored.txt  ocean_base_refactored_v2.txt  ocean_core.cpp  ocean_gltf.cpp  ocean_tools.cpp
coregfx/src/frost/: frost.cpp  frost_jni.cpp
coregfx/src/imstudio/: imstudio_debug.cpp
coregfx/src/ipcoe17/: ipcoe17_client.cpp
coregfx/src/overlay/: overlay_custom.txt  overlay_image.txt  tool_launcher.cpp  tool_launcher.cpp.bak
coregfx/src/pbr/: DescriptorSetLayouts.hpp  Pipelines.hpp  ShaderValuesParams.hpp  Textures.hpp
coregfx/src/rsc/: rsc.cpp
coregfx/src/util/: CommandLineParser.cpp  framebuffer_manager.cpp  gpu_selector.cpp  synchronization_manager.cpp
cryo-protocol/: CMakeLists.txt  FINAL_ARCHITECTURE.md  IMPROVEMENTS_SUMMARY.md  QUICK_REFERENCE.md  README.md  RESILIENT_CLIENT_GUIDE.md  STATE_TRIGGERS_GUIDE.md  TEMPLATE_SYSTEM_GUIDE.md  VISUAL_COMMANDS.md  pom.xml
cryo-protocol/examples/: README.md  frame_000.frame.pbtxt  frame_001.frame.pbtxt  frame_002.frame.pbtxt  frame_003.frame.pbtxt  frame_004.frame.pbtxt  game_server_minimal_spawn.pbtxt  interactive_ui_example.pbtxt  interactive_ui_frame_001.pbtxt  interactive_ui_frame_002.pbtxt  interactive_ui_frame_003.pbtxt  interactive_ui_frame_004.pbtxt  interactive_ui_frame_005.pbtxt  state_triggers_npc_example.pbtxt  state_triggers_objects_example.pbtxt
cryo-protocol/examples/templates/: door_standard_template.pbtxt  teleporter_template.pbtxt  torch_light_template.pbtxt
cryo-protocol/proto/: ARCTIC_INTEGRATION.md  CHANGELOG.md  EFFICIENCY_ANALYSIS.md  FRAME_SYSTEM_QUICKREF.md  REORGANIZATION_SUMMARY.md  STRUCTURE.md  cryo_common.proto  cryo_container.proto
cryo-protocol/proto/agent_commands/: cryo_agends_commands.proto  cryo_drop.proto  cryo_move.proto  cryo_wait.proto
cryo-protocol/proto/animation_simulation/: cryo_animation.proto
cryo-protocol/proto/animation_skinning/: cryo_physics.proto  particle_system.proto
cryo-protocol/proto/asset_management/: cryo_asset_gltf.proto  cryo_asset_gltf_binary.proto  cryo_asset_gltf_commands.proto  cryo_asset_mesh.proto  cryo_asset_shader.proto  cryo_asset_texture.proto  cryo_authoring.proto  cryo_material_commands.proto  cryo_project.proto  cryo_runtime.proto
cryo-protocol/proto/camera_viewport/: cryo_camera.proto
cryo-protocol/proto/debugging_profiling/: debug.proto  telemetry.proto
cryo-protocol/proto/ecs/: cryo_create_entity.proto  cryo_delete_entity.proto  cryo_entity.proto  cryo_entity_hierarchy.proto  cryo_entity_state.proto  cryo_load_entity.proto  cryo_move_entity.proto  cryo_scripting.proto  cryo_state_triggers.proto  cryo_templates.proto  cryo_unload_entity.proto
cryo-protocol/proto/entity_scene_graph/: cryo_create_entity.proto  cryo_entity_hierarchy.proto  cryo_entity_state.proto  cryo_scene_graph_operations.proto
cryo-protocol/proto/render_pipeline/: cryo_render_settings.proto  cryo_visual_commands.proto
cryo-protocol/proto/render_targets/: README.md
cryo-protocol/proto/rendering_2d/: atlas_2d.proto  sprite_2d.proto  sprite_commands.proto  tile_2d.proto
cryo-protocol/proto/rendering_2d_ui/: atlas_2d.proto  sprite_2d.proto  sprite_commands.proto  tile_2d.proto  ui_3d_icon.proto  ui_3d_text.proto  ui_animation.proto  ui_base.proto  ui_button.proto  ui_commands.proto  ui_hierarchy.proto  ui_icon.proto  ui_input.proto  ui_interaction_events.proto  ui_overlay.proto  ui_panel.proto  ui_state.proto  ui_statusbar.proto  ui_system.proto  ui_text.proto
cryo-protocol/proto/rendering_commands/: cryo_lighting.proto  cryo_post_processing.proto
cryo-protocol/proto/scene_graph/: cryo_scene_graph.proto  cryo_scene_graph_operations.proto
cryo-protocol/proto/scene_update_synchronization/: batch_commands.proto  cryo_scene_update.proto  scene_update_delta.proto
cryo-protocol/proto/scripting_agent_commands/: cryo_pickup.proto  cryo_scripting.proto
cryo-protocol/proto/shader_material/: cryo_asset_material.proto  (+2 more)
data-driven-renderer/: CMakeLists.txt  README.md  data-driven.index.xml
data-driven-renderer/docs/: DATA_DRIVEN_API_SPEC.md  Data Driven API.md  HYBRID_MATERIAL_SYSTEM.md  INFO.md  SCENE_FORMATS.md  SHADERS.md  SUMMARY.md  implementation_plan.md
data-driven-renderer/examples/: gltf-models-example.xml
data-driven-renderer/src/: GrpcRendererClient.cpp  MaterialOverride.cpp  Renderer.hpp  main.cpp
games/avannaaq-001/: CMakeLists.txt  README.md
modules/: CMakeLists.txt
nanook/: CLAUDE_USAGE.md  CMakeLists.txt  USAGE_EXAMPLE.md
nanook/src/: Nanook.cpp
nunaq/: BROWSER_NAMING.md  CMakeLists.txt
orchestrators/: CMakeLists.txt
orchestrators/nanook/: ARCHITECTURE.md  CLI_SPEC.md  QUICKSTART.md  README.md  nanook.config.ini
sdk/qimmiit-sdk-dev/: CMakeLists.txt  README.md  build-sdk.bat
(+399 files in other folders)
